<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert_User"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.InsertUserActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_insert_User_textInputLayout_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_insert_User_textInputEditText_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:inputType="text"
            android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_insert_User_textInputLayout_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/activity_insert_User_textInputLayout_user"
        app:layout_constraintStart_toStartOf="@id/activity_insert_User_textInputLayout_user"
        app:layout_constraintTop_toBottomOf="@id/activity_insert_User_textInputLayout_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_insert_User_textInputEditText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_insert_User_textInputLayout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/activity_insert_User_textInputLayout_name"
        app:layout_constraintStart_toStartOf="@id/activity_insert_User_textInputLayout_name"
        app:layout_constraintTop_toBottomOf="@id/activity_insert_User_textInputLayout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_insert_User_textInputEditText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activity_insert_User_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="insertOnClick"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/activity_insert_User_textInputLayout_password"
        app:layout_constraintStart_toStartOf="@id/activity_insert_User_textInputLayout_password"
        app:layout_constraintTop_toBottomOf="@id/activity_insert_User_textInputLayout_password"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
