<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.LoginActivity"
    android:id="@+id/coordinatorLayout"
    android:fillViewport="true">

    <ImageView
        android:id="@+id/activity_login_imageView_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activity_login_textInputlayout_userName"
        app:layout_constraintStart_toStartOf="@+id/activity_login_textInputlayout_userName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@mipmap/logo_round"
        tools:layout_conversion_absoluteHeight="100dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="100dp" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_textInputlayout_userName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_imageView_logo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        tools:layout_conversion_absoluteHeight="61dp"
        tools:layout_editor_absoluteY="24dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_conversion_absoluteWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_login_textInputEditText_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:inputType="text"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_editor_absoluteY="29dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_conversion_absoluteWidth="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_textInputlayout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_textInputlayout_userName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        tools:layout_conversion_absoluteHeight="61dp"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_conversion_absoluteWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_login_textInputEditText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_editor_absoluteY="21dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_conversion_absoluteWidth="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activity_login_button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="authenticationOnClick"
        android:layout_marginTop="16dp"
        android:text="@string/logIn"
        app:layout_constraintEnd_toEndOf="@id/activity_login_textInputlayout_password"
        app:layout_constraintStart_toStartOf="@id/activity_login_textInputlayout_password"
        app:layout_constraintTop_toBottomOf="@id/activity_login_textInputlayout_password"
        tools:layout_conversion_absoluteHeight="105dp"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />


    <Button
        android:id="@+id/activity_login_button_addUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="addUserOnClick"
        android:text="@string/addUser"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/activity_login_button_login"
        app:layout_constraintTop_toBottomOf="@id/activity_login_button_login"
        app:layout_constraintEnd_toEndOf="@+id/activity_login_button_login"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_conversion_absoluteHeight="301dp"
        tools:layout_conversion_absoluteWidth="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>