<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_group_iot_mgmt_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/group_iot_mgmt_menu"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name" />

    <ScrollView
        android:id="@+id/activity_group_iot_mgmt_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_group_iot_mgmt_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.activity.GroupIotMgmtForm">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_group_iot_mgmt_textInputLayout_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="61dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_group_iot_mgmt_editText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    tools:layout_conversion_absoluteHeight="56dp"
                    tools:layout_conversion_absoluteWidth="0dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="29dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_group_iot_mgmt_textInputLayout_temperature"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_group_iot_mgmt_textInputLayout_name"
                tools:layout_conversion_absoluteHeight="61dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_group_iot_mgmt_editText_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    tools:layout_conversion_absoluteHeight="56dp"
                    tools:layout_conversion_absoluteWidth="0dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="29dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_group_iot_mgmt_textInputLayout_humidity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_group_iot_mgmt_textInputLayout_temperature"
                tools:layout_conversion_absoluteHeight="61dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="24dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_group_iot_mgmt_editText_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    android:inputType="text"
                    tools:layout_conversion_absoluteHeight="56dp"
                    tools:layout_editor_absoluteY="29dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_conversion_absoluteWidth="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_group_iot_mgmt_textInputLayout_noBreak"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="61dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="24dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_group_iot_mgmt_textInputLayout_humidity"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_group_iot_mgmt_editText_noBreak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    android:inputType="text"
                    tools:layout_conversion_absoluteHeight="56dp"
                    tools:layout_editor_absoluteY="29dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_conversion_absoluteWidth="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>